Fix community tab visibility.

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -108,7 +108,7 @@
       }
 
       .site-links {
-        width: 380px;
+        width: 390px;
         padding-right: 20px;
         display: block;
         overflow: hidden;
